--- a/projeto-emyjoiasBD/estilo.css
+++ b/projeto-emyjoiasBD/estilo.css
@@ -149,7 +149,6 @@ nav.navbar-transparente {
 .img-joias{
 	width: 300px;
 	height: 300px;
-	
 	border-radius: 15px;
 }
 
@@ -166,7 +165,7 @@ footer {
 }
 
 #rodape{
-	margin-top: 40px;
+	margin-top: 100px;
 	position: fixed;
 	width: 1550px;
 }
@@ -209,8 +208,44 @@ h1:hover{
 	text-align: left;
 	font-family: Singel Serif Font Family;
 	background: linear-gradient(#fa8c95,#fac7ad);
-	border-radius: 5px;
-	color: #7c7246;
+	border-radius:15px;
+	color: white;
+}
+
+#carrosel1{
+	background-image: url("imagens/carrosel1.jpeg");
+	width: 280px;
+	height: 300px;
+	border-radius: 15px;
+	background-size: 100%;
+	padding-top: 270px;
+}
+
+#carrosel2{
+	background-image: url("imagens/carrosel2.jpeg");
+	width: 280px;
+	height: 300px;
+	border-radius: 15px;
+	background-size: 100%;
+	padding-top: 293px;
+}
+
+#carrosel3{
+	background-image: url("imagens/carrosel3.jpeg");
+	width: 280px;
+	height: 300px;
+	border-radius: 15px;
+	background-size: 100%;
+	padding-top: 270px;
+}
+
+#carrosel4{
+	background-image: url("imagens/carrosel4.jpeg");
+	width: 280px;
+	height: 300px;
+	border-radius: 15px;
+	background-size: 100%;
+	padding-top: 290px;
 }
 
 .preco{
